test/testdata/result/not_indexable_assignment_error.lox
(try 1)[0] = 0; // error: 'result' value is not indexable
